Failure tasks call rollback

--- a/src/roles/webservers/tasks/main.yml
+++ b/src/roles/webservers/tasks/main.yml
@@ -1,13 +1,5 @@
 ---
-- name: Check accessible
-  action: ping
-
-- name: Test already installed
-  file:
-    path: "{{ item }}"
-    state: directory
-  with_items:
-    - "{{ tmp_path }}"
-
-- name:
-  command: echo Configure
+- block:
+    - include: tasks.yml
+  rescue:
+    - include: rollback.yml
