lots of failed task to know how it works

--- a/src/roles/webservers/tasks/main.yml
+++ b/src/roles/webservers/tasks/main.yml
@@ -1,5 +1,12 @@
 ---
 - block:
-    - include: tasks.yml
+    - debug: msg='toto'
+    - block:
+        - debug: msg='tutu'
+        - include: tasks.yml
+        - command: /bin/false
+        - debug: msg='titi'
+      rescue:
+        - debug: msg='tata'
   rescue:
     - include: rollback.yml
