--- a/src/roles/webservers/tasks/rollback.yml
+++ b/src/roles/webservers/tasks/rollback.yml
@@ -1,5 +1,4 @@
 ---
-- name: Rollback procedure
+- name: Rollback general procedure
   command: echo "rollbacked"
-  # debug:
-    # msg: "Procedure rollbacked"
+  debug: msg="Procedure rollbacked"
